WIP: baja logica (backend)
